# CatPyNet

./: Boilerplate.py  ChangeLog  LICENSE  README.md  Struktur CommandlineToll  converter.py  keywords.txt  latex_integraton.py  requirements.txt  setup.cfg  sources.txt  stdout  test.java  test.py
.github/workflows/: github_build.yml  python-package.yml
catPyNet/: Utilities.py
catPyNet/algorithm/: AlgorithmBase.py  CoreRAFAlgorithm.py  GreedilyGrowMaxCAF2MaxRAF.py  Importance.py  MaxCAFAlgorithm.py  MaxPseudoRAFAlgorithm.py  MaxRAFAlgorithm.py  MinIRAFHeuristic.py  MinRAFGeneratingElement.py
catPyNet/fileIO/: GraphIO.py  IOManager.py  ModelIO.py
catPyNet/io/: GraphIO.py  ModelIO.py
catPyNet/main/: CatPyNet.py
catPyNet/model/: DisjunctiveNormalForm.py  MoleculeType.py  Reaction.py  ReactionSystem.py
catPyNet/settings/: ArrowNotation.py  ReactionNotation.py
catPyNet/tests/: context.py  issues.txt  test_advanced.py  test_basic.py
catPyNet/tools/: CommandLineTool.py  PolymerTool.py
newOrganisation/: _version.py  setup.cfg  setup.py
test_files/: eco00010             Glycolysis  Gl.txt  example-10.crs  example-2.crs  inhibitions-1.crs  vis-1.crs  vis-2.crs
test_results/: e_coli_rs.crs  e_coli_rs_shared.crs  example-0.crs  example-1.crs  example-10.crs  example-2.crs  example-3.crs  example-4.crs  example-5.crs  example-6.crs  example-7.crs  example-8.crs  example-9.crs  inhibitions-1.crs  prokaryotic-network.crs  result4.crs  result4.graphml  test_reactions.crs  test_reactions_max_caf.crs  test_reactions_max_raf.crs  test_reactions_min_raf_gen.crs
(+173 files in other folders)
