[metadata]
name = catpynet
description = CatPyNet is a lean tool for computations on reaction systems based on CatReNet
author = Jan Ritschel
author_email = jan.ritschel@outlook.de
url = https://github.com/JanRitschel/CatPyNet
license = 
long_description = file:README.md

[options]
packages = find:
install_requires = 
    networkx
    tqdm